# sammy-20250510-1

./: docker-compose.yaml  sammy-20250510-1.code-workspace
,vscode/: tasks.json
backend/: .flake8  Dockerfile  main.py  pyproject.toml  pytest.ini  report.html  setup.py
backend/resources/: fernet.key
backend/src/: api.py
backend/src/app/: __init__.py  authentication.py  duckdb_persistence_proxy.py  model_enum.py  persistence.py  services.py  sqlmodel_models.py
backend/tests/: test_authentication.py  test_services.py
backend/tests/reports/: test_output.html
frontend/: app.vue  content.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/assets/css/: main.css
frontend/components/: AppNavBar.vue  CollapsibleMenu.vue  PropertiesEditor.vue
frontend/composables/: useApi.ts
frontend/content/: about.md  index.md  test.md
frontend/layouts/: default.vue
frontend/models/: models.ts
frontend/pages/: [...slug].vue  components.vue  oldindex.vue  systems.vue
frontend/plugins/: bootstrap.client.ts  popper.client.ts
nginx/: default.conf
